--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -42,3 +42,27 @@
     </view>
   </view>
 </view>
+<view class='information'>
+  <view class='container-fluid'>
+      <view class='clearfix'>
+        <view class='informationTitle clearfix'>
+          <view class='informationTitleLeft pull-left'>
+            <text>房产资讯</text>
+          </view>
+          <view class='informationTitleRight pull-right'>
+            <view class='informationTitleRightImg pull-left'>
+              <image mode='aspectFit' src='/img/icon/shuaxin.png'></image>
+            </view>
+            <text class='pull-left'>换一批</text>
+          </view>
+        </view>
+      </view>
+      <view class='informationMain'>
+        <view class='informationMainText'>
+          <text>房产资讯房产资讯房产资讯房产资讯房产资讯房产资讯房产资讯</text>
+        </view>
+        
+      </view>
+  </view>
+  
+</view>
