--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -111,14 +111,16 @@ swiper-item image {
   height: 100%;
   
 }
-.informationMain{}
+.informationMain{
+  border-bottom: 1px solid #f5f5f5;
+}
 .informationMainText{
   border-bottom:2rpx solid #f5f5f5;
   padding:20rpx 0;
   overflow-wrap: break-word;
 }
-.informationMainText text{
- 
+.informationMainTextB{
+  margin-bottom: 30rpx;
   font-weight: bold;
   font-size: 30rpx;
 }
