--- a/pages/listHouse/listHouse.wxss
+++ b/pages/listHouse/listHouse.wxss
@@ -4,6 +4,13 @@
 .form-control{
   width: auto
 }
+.fix{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10
+}
 .search{
   position: relative；
   
@@ -35,12 +42,14 @@
 .filtrateConOuter{
   position: relative;
   width: 100%;
+
 }
 .filtrateCon{
   width: 100%;
   position: absolute;
   top: 0rpx;
   left: 0;
+  z-index: 2;
  
 }
 .filtrateLi{
@@ -64,6 +73,7 @@
   border-bottom: 1px solid #eee;
   padding-bottom: 40rpx;
   position: relative;
+  
 }
 .recommendList .recommendListImg{
   width: 300rpx;
