--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -21,25 +21,28 @@
         推荐楼盘
       </view>
     </view>
-    <view class='recommendList' wx:for="{{recommendImg}}" wx:for-item="item" wx:key="{{index}}">
-      <view class='clearfix'>
-        <view class='recommendListImg'>
-          <image mode='aspectFit' src="{{item.src}}" ></image>
-        </view>
-        <view class='recommendListCon'>
-          <text class='h4'>{{item.title}} <text class='small'>{{item.small}}</text> </text>
-          <view class='price'>
-            <text>{{item.price}}元/m²</text>
+    <navigator url="../details/details" wx:for="{{recommendImg}}" wx:for-item="item" wx:key="{{index}}">
+      <view class='recommendList'>
+        <view class='clearfix'>
+          <view class='recommendListImg'>
+            <image mode='aspectFit' src="{{item.src}}" ></image>
           </view>
-          <view class='tally'>
-            <text wx:for="{{item.tally}}" wx:for-item="itemTally" wx:key="{{tallyIdx}}">{{itemTally.text}}</text>
-          </view>
-          <view class='discountsMsg'>
-            <text>{{item.discountsMsg}}</text>
+          <view class='recommendListCon'>
+            <text class='h4'>{{item.title}} <text class='small'>{{item.small}}</text> </text>
+            <view class='price'>
+              <text>{{item.price}}元/m²</text>
+            </view>
+            <view class='tally'>
+              <text wx:for="{{item.tally}}" wx:for-item="itemTally" wx:key="{{tallyIdx}}">{{itemTally.text}}</text>
+            </view>
+            <view class='discountsMsg'>
+              <text>{{item.discountsMsg}}</text>
+            </view>
           </view>
         </view>
       </view>
-    </view>
+    </navigator>
+    
   </view>
 </view>
 <view class='information'>
